<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:text="@string/order_details"
            android:textAlignment="center"
            android:textColor="#8B4513"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:text="@string/name"
            android:textColor="#8B4513"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:textAlignment="center"

            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:text="@string/drink"
            android:textColor="#8B4513"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/Drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:text="@string/drink_type_label"
            android:textColor="#8B4513"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/DrinkType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:text="@string/extras"
            android:textColor="#8B4513"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/Extras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:textAlignment="center"
            android:textSize="48sp" />

    </LinearLayout>
</ScrollView>